--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Permanent+Marker|Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
