--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="../../KMMNS/src/assets/Images/beskonacno.jpg">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Permanent+Marker|Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
